--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "gulp": "^4.0.0",
+    "lodash": "^4.17.11",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
