--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/hexlet-boilerplates/nodejs-package#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "gulp": "^4.0.0",
     "source-map-support": "^0.5.10"
   },
